# bistable-smart-switch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig
Hardware/220AC-mini-C3-board/: 220AC-mini-C3-board CAF.kicad_prl  220AC-mini-C3-board CAF.kicad_pro  220AC-mini-C3-board-1.0.kicad_pcb  220AC-mini-C3-board-1.0.kicad_prl  220AC-mini-C3-board-square-54mm.kicad_pcb  220AC-mini-C3-board.kicad_pcb  220AC-mini-C3-board.kicad_prl  220AC-mini-C3-board.kicad_pro  220AC-mini-C3-board.kicad_sch  220AC-mini-C3-board.kicad_sch-bak  fp-info-cache  sym-lib-table
Hardware/220AC-mini-C3-board/3D/: 220ac-mini-c3-board.stl
Hardware/220AC-mini-C3-board/parts/: HF163F-L_24-HL2T.lib  Latch-relay.kicad_sym  PBO-3C.kicad_sym
Hardware/220AC-mini-C3-board/parts/3d/: 0443Series_LTF.step  1729128-screw-terminal.stp  BRL3225T4R7M-L1.step  C8269.step  CAP_CC1808_YAG.step  HF163F-L_24-HL2T.step  IND_SMDRI_SXN.step  TO-92-3L_5P33X5P2_ONS.step
Hardware/220AC-mini-C3-board/parts/footprints.pretty/: 0443001.DR.kicad_mod  1729128-screw-terminal.kicad_mod  BC547B.kicad_mod  CC1808KKX7RCBB102.kicad_mod  Conn_C8269.kicad_mod  FH44L-1AT-L2-DC3V.kicad_mod  HF163FL24HL2T.kicad_mod  IND_BRL3225T4R7M.kicad_mod  PBO-3C-3.kicad_mod  SMDRI127-470MT.kicad_mod  SMW212RJT.kicad_mod
Hardware/220AC-mini-C3-board/production/: 220AC-mini-C3-board-all-pos.csv  220AC-mini-C3-board-all-pos.xlsx  BOM.csv  BOM.xlsx
Hardware/220AC-mini-C3-board/production/1.1/: 220AC-mini-C3-board-BOM.csv  (+3 more)
Hardware/3D/: case-switch-epaper.blend  case-switch-epaper.blend1  case-switch-epaper.stl
Hardware/C3-27-epaper-touch/: C3-27-epaper-touch.kicad_pcb  C3-27-epaper-touch.kicad_prl  C3-27-epaper-touch.kicad_pro  C3-27-epaper-touch.kicad_sch  fp-info-cache  sym-lib-table
Hardware/C3-27-epaper-touch/3D/: C3-27-epaper-touch-3D.stl  case-switch-epaper.stl
Hardware/C3-27-epaper-touch/parts/: CP2102N-A02-GQFN28R.kicad_sym  RT9013-33GB.kicad_sym  SP0503BAHTG.bak  SP0503BAHTG.kicad_sym
Hardware/C3-27-epaper-touch/production/: C3-27-BOM.xlsx  C3-27-epaper-touch-all-pos-C3.xlsx  C3-27-epaper-touch-all-pos.csv  C3-27-epaper-touch-all-pos.xlsx  C3-27-epaper-touch.csv  C3-BOM.csv  C3-BOM.xlsx
Hardware/S3-27-epaper-touch-pro/: #auto_saved_files#  S3-27-epaper-touch.kicad_pcb  S3-27-epaper-touch.kicad_prl  S3-27-epaper-touch.kicad_pro  S3-27-epaper-touch.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
Hardware/S3-27-epaper-touch-pro/3D/: case-switch-epaper.stl
Hardware/S3-27-epaper-touch-pro/parts/: ESP32-C3-Wroom-02-N4.kicad_sym  ESP32-S3-WROOM-1-N8.kicad_sym  FH12-24S-0.5SH_55_.kicad_sym  RT9080-LDO.kicad_sym
components/Fonts/: CMakeLists.txt
components/Fonts/ubuntu/: Ubuntu_L7pt8b.h
components/epaper-spi/: CMakeLists.txt
components/i2c/: CMakeLists.txt  Kconfig.projbuild
main/: CMakeLists.txt  Kconfig.projbuild
main/buttons/: 6-button-actions.cpp
main/switch/getting-started/: i2c-scan.cpp  on-off-switch.cpp
main/switch/rainmaker/: cloud-switch.cpp
main/switch/rtc/: ds3231-switch.cpp  pcf8563-switch.cpp  rtc-switch.cpp  set-rtc-clock.cpp
main/tests/: deeepsleep.cpp  epd-27t91-test.cpp
sdk-config-board/: sdkconfig-S3  tinypico-ESP32
sdk-config-board/1.0_C3/: sdkconfig
sdk-config-board/1.1_C3/: sdkconfig
(+73 files in other folders)
